--- a/blocks/price/price.css
+++ b/blocks/price/price.css
@@ -1,6 +1,4 @@
 .price {
-  position: relative;
-  z-index: 1;
   width: 100%;
   margin: auto;
 }
